[project]
name = "miller"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "matplotlib",
    "setuptools-scm>=8.3.1",
    "tomli>=2.2.1",
    "hypothesis>=6.135.0",
    "uv>=0.7.11",
]

[project.optional-dependencies]
tests = ["pytest"]

[project.scripts]
miller = "miller:main"

[build-system]
requires = ["setuptools_scm[toml] >= 6.2"]

[tool.setuptools_scm]
